<resources>
    <string name="app_name">Llajta Comida</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_plates">Platos</string>
    <string name="menu_restaurants">Restaurantes</string>
    <string name="menu_favorit_plates">Platos favoritos</string>
    <string name="menu_favorit_restaurants">Restaurantes favoritos</string>
    <string name="menu_about_us">Acerca de nosotros</string>
    <string name="title_activity_get_location_maps">Map</string>
    <string name="btn_start">Acceder</string>
    <string name="content">Bienvenido a Llajta Comida, accede con tu cuenta de Google</string>
    <string name="access_denied_message">Acceso denegado...</string>
    <string name="restart_app_message">Reiniciar aplicación...</string>
    <string name="title_alert_init_title">INICIO</string>
    <string name="title_alert_init_message">Cargando...</string>
    <string name="btn_sign_out">Cerrar sesión</string>
    <string name="btn_ok">Vale</string>
    <string name="reorder_icon">Reordenar lista</string>
    <string name="add_icon">Agregar</string>
    <string name="edit_icon">Editar</string>
    <string name="delete_icon">Eliminar</string>
    <string name="galery_icon">Galería</string>
    <string name="save_icon">Guardar</string>
    <string name="menu_restaurant_icon">Menú</string>
    <string name="rest_public_of_icon">Restaurantes no publicados</string>
    <string name="share_icon">Compartir</string>
    <string name="promotions_restaurant_icon">Promociones</string>
    <string name="switch_activate_promotion">Mostrar promoción</string>
    <string name="title_creat_plate">Crear plato</string>
    <string name="title_edit_plate">Editar plato</string>
    <string name="et_plate_name">Nombre del plato</string>
    <string name="et_plate_ingredients">Ingredientes y  preparación</string>
    <string name="et_plate_origin">Origen e historia</string>
    <string name="btn_photo_plate">Cargar una imagen del plato</string>
    <string name="et_search">Buscar...</string>
    <string name="title_creat_restaurant">Crear restaurante</string>
    <string name="title_edit_restaurant">Editar restaurante</string>
    <string name="et_restaurant_name">Nombre del restaurante</string>
    <string name="et_owner_name">Nombre del propietario</string>
    <string name="et_address">Dirección del restaurante</string>
    <string name="et_phone">Teléfonos</string>
    <string name="et_origin_desc">Origen y descipción del lugar</string>
    <string name="btn_photo_restaurant">Toma una foto frontal del restaurante</string>
    <string name="tv_owner">Propietario:</string>
    <string name="tv_phone">Teléfonos:</string>
    <string name="tv_address">Dirección:</string>
    <string name="tv_origin_desc">Sobre el restaurante</string>
    <string name="tv_photo">Foto</string>
    <string name="tv_menu">Menú</string>
    <string name="tv_location">Localización</string>
    <string name="tv_title_menu">Menú del restaurante</string>
    <string name="tv_rest_with_plate_title">Restaurantes con</string>
    <string name="tv_rest_with_this_plate">Restaurantes con este plato</string>
    <string name="tv_restaurants_found">encontrados</string>
    <string name="tv_rest_with_title">Restaurantes con:</string>
    <string name="tv_title_promotions">Promociones del restaurante</string>
    <string name="btn_publish">Publicar</string>
    <string name="icon_public_on">Publicar restaurante</string>
    <string name="icon_public_of">Dejar de publicar restaurante</string>
    <string name="confirm_message_publish">Se publicará este restaurante, ¿Quieres continuar?</string>
    <string name="confirm_message_publish_of">Se dejará de publicar este restaurante, ¿Quieres continuar?</string>
    <string name="confirm_message_restaurant_delete">Se eliminará este restaurante, ¿Quieres continuar?</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_author">Autor</string>
    <string name="tv_author_id">Autor: </string>
    <string name="cb_public">Público</string>
    <string name="sub_title_restaurant_public_of">Sin publicar</string>
    <string name="search_address">Buscar dirección...</string>
    <string name="tv_latitude">Latitud</string>
    <string name="tv_longitude">Longitud</string>
    <string name="tv_lat_lng">No definido...</string>
    <string name="marker_title">Mover</string>
    <string name="marker_search_description">Manten pulsado el marcador</string>
    <string name="load_position">Estableciendo coordenadas...</string>
    <string name="item_normal">Normal</string>
    <string name="item_hibrid">Híbrido</string>
    <string name="item_satellite">Satélite</string>
    <string name="item_terrain">Terreno</string>
    <string name="plates_title">Platos</string>
    <string name="restaurants_title">Restaurantes</string>
    <string name="tv_name_plate_view">Nombre del plato</string>
    <string name="tv_ingredients_plate_view">¿Qué ingredientes lleva y cómo se prepara?</string>
    <string name="tv_origin_plate_view">Hablemos un poco de su Origen e Historia</string>
    <string name="plate_image_crop_title">Selecciona una imagen del plato</string>
    <string name="restaurant_image_crop_title">Selecciona una imagen del Restaurante</string>
    <string name="lorem_short">Lorem Ipsum es simplemente el texto de relleno de las imprentas
        y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el
        año 1500, cuando un impresor
    </string>
    <string name="lorem_long">Al contrario del pensamiento popular, el texto de Lorem Ipsum no es
        simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del
        año 45 antes de Cristo, haciendo que este adquiera mas de 2000 años de antiguedad. Richard McClintock,
        un profesor de Latin de la Universidad de Hampden-Sydney en Virginia, encontró una de las palabras más oscuras.
    </string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_store">Guardar</string>
    <string name="tv_undefined">No definido</string>
    <string name="title_activity_set_location_map">Map</string>
    <string name="title_load_list_progress_dialog">BUSCAR</string>
    <string name="message_load_list_progress_dialog">Cargando lista de usuarios...</string>
    <string name="title_sigIn_progress_dialog">ACCESO</string>
    <string name="message_sign_in_progress_dialog">Conectando...</string>
    <string name="welcome">Bienvenido</string>
    <string name="tv_title_ratings_and_opinions">Calificaciones y opiniones</string>
    <string name="et_optional_experience">Cuentanos tu experiencia (opcional)...</string>
    <string name="tv_rating">Puntuación</string>
    <string name="message_invalid_option">Opción inválida...</string>
    <string name="message_establish">Establecido</string>
    <string name="message_is_failed">Falló el proceso...</string>
    <string name="add_plate_to_favorite_list">Se agregó a la lista de platos favoritos</string>
    <string name="remove_from_list_favorite_plates">Se quitó de la lista de platos favoritos</string>
    <string name="add_restaurant_to_favorite_list">Se agregó a la lista de restaurantes favoritos</string>
    <string name="remove_from_list_favorite_restaurants">Se quitó de la lista de restaurantes favoritos</string>
    <string name="title_confirm_message">Nota</string>
    <string name="confirm_message">gracias por confiar en nosotros!
        \n\nLos administradores verificarán la información ingresada.
        \n\nDebes estar atento, es posible que se pongan en contacto contigo.</string>
    <string name="message_store_complete">Se almacenó correctamete</string>
    <string name="message_store_incomplete">No se pudo almacenar correctamente</string>
    <string name="message_update_complete">Se actualizó correctamete</string>
    <string name="message_update_incomplete">No se pudo actualizar correctamente</string>
    <string name="message_delete_complete">Se eliminó correctamente</string>
    <string name="message_delete_incomplete">No se eliminó correctamente</string>
    <string name="message_deleting">Eliminando...</string>
    <string name="message_uploading">Subiendo...</string>
    <string name="message_updating">Actualizando...</string>
    <string name="message_delete_question">Se eliminará permanentemente \n¿Quieres continuar?</string>
    <string name="confirm_title">Confirmar</string>
    <string name="message_record_already_exists">Ya existe un registro con el mismo nombre</string>
    <string name="message_name_required">El nombre es requerido</string>
    <string name="message_description_required">El origen es requerido</string>
    <string name="message_ingredients_required">Los ingredientes son requeridos</string>
    <string name="message_image_required">La imagen es requerida</string>
    <string name="message_owner_name_invalid">El nombre del propietario es inválido</string>
    <string name="message_address_required">La dirección es requerida</string>
    <string name="message_phone_required">El campo teléfono es requerido</string>
    <string name="message_phone_invalid">El campo teléfono es inválido \nej.(4XXXXXX;7XXXXXXX;6XXXXXXX)</string>
    <string name="message_coordinates_required">Las coordenadas son requeridas</string>
    <string name="message_searching">Buscando</string>
    <string name="message_reference_not_found">No se encontró la referencia</string>
    <string name="message_error">Algo salió mal...</string>
    <string name="message_error_disconnected">¡Sin conexión!\nSe intentará reparar el proceso cuando vuelva la conexión</string>
    <string name="message_check_the_fileds">Revisa los campos...</string>
    <string name="message_remove">Quitar...</string>
    <string name="message_clossing">Cerrando...</string>
    <string name="message_gps_activate">El GPS está desactivado\n¿Quieres activarlo?</string>
    <string name="message_not_found_restaurants">No existen restaurantes con este plato en su menú</string>
    <string name="message_not_contain_images">No contiene imágenes en presentación...</string>
    <string name="tv_user_option_list">Usuarios</string>
    <string name="tv_resume_title">Resumen</string>
    <string name="tv_resume">
        Nuestro objetivo es el de realzar una de las cualidades más importantes de Cochabamba como es la gastronomía,
        proporcionando a la población local y visitante de una herramienta para sus dispositivos móviles para que a través de esta, cuenten con la información necesaria
        y así puedan conocer sobre las opciones en comida y los lugares donde pueden ser encontradas.
    </string>
    <string name="tv_credits">Univervidad Mayor de San Simón
        \nFacultad de Ciencias y Tecnología
        \nIngeniería de Sistemas</string>
    <string name="tv_mail">Email: llajta.comida.app@gmail.com</string>
    <string name="tv_example_for_price">Formato de precio: Se puede agregar más de un precio, separando con un espacio (moneda boliviana).
        \n- Ejemplo sin precio: [ ] Bs (Se tomará un precio por defecto de la aplicación)
        \n- Ejemplo con un precio: [10] Bs
        \n- Ejemplo con más de un precio: [10 50 120] Bs
        \n Tomar en cuneta que el primer precio ingresado, será el precio que el programa tomará en cuenta para las comparaciones entre restaurantes.
    </string>
    <string name="et_promotion_title">Título de la promoción</string>
    <string name="promotion_description">Descripción de la promoción</string>
    <string name="price_title">Precio(s)</string>
    <string name="promotion_price">Precio de promoción</string>
    <string name="check_show_old_price">Mostrar precio en menú</string>
    <string name="type_currency">Bs</string>
</resources>