<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"/>/>

        <item
            android:id="@+id/nav_plates"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_plates" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/menu_restaurants" />

        <item
            android:id="@+id/nav_favorit_plates"
            android:icon="@drawable/icon_star"
            android:title="@string/menu_favorit_plates" />
        <item
            android:id="@+id/nav_favorit_restaurants"
            android:icon="@drawable/icon_star"
            android:title="@string/menu_favorit_restaurants" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/icon_users"
            android:title="@string/tv_user_option_list" />

<!--        Falta implementar el fragmento de sobre nosotros-->
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_tablet_android_24"
            android:title="@string/menu_about_us" />
    </group>


</menu>