<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    app:showAsAction="always"  PERMITE QUE SE MUESTRE EL ICONO-->
    <item
        android:id="@+id/iconAdd"
        android:icon="@drawable/icon_add"
        android:title="@string/add_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconEdit"
        android:icon="@drawable/icon_edit"
        android:title="@string/edit_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconDelete"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconGalery"
        android:icon="@drawable/ic_menu_gallery_white"
        android:title="@string/galery_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconSave"
        android:icon="@drawable/icon_save"
        android:title="@string/save_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconMenuRestaurant"
        android:icon="@drawable/icon_menu_restaurant"
        android:title="@string/menu_restaurant_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconListPublicOf"
        android:icon="@drawable/icon_list_public_of"
        android:title="@string/rest_public_of_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconPublish"
        android:title="@string/rest_public_of_icon"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/iconSearch"
        android:icon="@drawable/icon_search_white"
        android:title="@string/et_search_plates"
        app:showAsAction="always"
        android:visible="false"/>


</menu>

