<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.AboutUsFragment"
    android:orientation="vertical"
    android:background="#F2FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>
            
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <ImageView
                android:id="@+id/ivIconImage"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/app_icon"
                android:scaleType="fitXY"
                android:foregroundGravity="center"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_resume_title"
                android:layout_marginHorizontal="5dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_resume"
                android:layout_marginHorizontal="5dp"
                android:justificationMode="inter_word"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_credits"
                android:textAlignment="center"
                android:textSize="10dp"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_mail"
                android:textAlignment="center"
                android:textSize="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"/>
<!--            android:textIsSelectable="true"-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>