<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="#E4FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvAlertTitle"
                android:text="@string/tv_undefined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="@string/tv_example_for_price"
                android:justificationMode="inter_word"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:layout_weight="6"
                    android:textAlignment="textEnd">
                    <EditText
                        android:id="@+id/etAlertPrice"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/price_title"
                        android:textSize="20sp"
                        app:counterEnabled="true"
                        android:maxLength="20"
                        android:selectAllOnFocus="true"
                        android:gravity="center"
                        android:textAlignment="textEnd"
                        tools:ignore="RtlCompat"
                        android:focusable="true"
                        android:background="#ffffff"
                        android:layout_weight="5"
                        android:inputType="number|text"
                        android:paddingHorizontal="5dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--        android:inputType="number|text"-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:textAlignment="textStart"
                    android:gravity="center"
                    android:text="@string/type_currency"
                    tools:ignore="RtlCompat"
                    android:paddingHorizontal="5dp"/>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnAlertCancel"
                    android:text="@string/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_cancel"
                    android:textColor="#ffffff"
                    android:layout_marginRight="2dp"/>
                <Button
                    android:id="@+id/btnAlertAdd"
                    android:text="@string/add_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_continue"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="2dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/btnAlertDelete"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_delete"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>